--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
+body {
+  background-color: #000000
+    
+}
+
 .content {
+  background-color: #323232;
+  color: #ffffff; 
   width: 700px;
   margin: auto;
   padding: 25px 50px;
